temp/onboarding_retrieve/dev/objects/Lead/fields/AD__c.field-meta.xml
<CustomField>
    <fullName>AD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AD</label>
    <type>TextArea</type>
</CustomField>