temp/onboarding_retrieve/dev/objects/Lead/fields/AdressB__c.field-meta.xml
<CustomField>
    <fullName>AdressB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Domicilio del beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>