temp/onboarding_retrieve/dev/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>The referred individual&apos;s age</description>
    <formula>FLOOR((TODAY() - FinServ__RelatedAccount__r.PersonBirthdate )/365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>