temp/onboarding_retrieve/dev/objects/Lead/fields/Ahorro__c.field-meta.xml
<CustomField>
    <fullName>Ahorro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ahorro</label>
    <type>TextArea</type>
</CustomField>