temp/onboarding_retrieve/dev/objects/Lead/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <description>Annual income of the referred individual</description>
    <formula>FinServ__RelatedAccount__r.FinServ__AnnualIncome__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>