temp/onboarding_retrieve/dev/objects/Lead/fields/Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apellido Materno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>