temp/onboarding_retrieve/dev/objects/Lead/fields/Apellido_MaternoB__c.field-meta.xml
<CustomField>
    <fullName>Apellido_MaternoB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Apellido Materno Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>