temp/onboarding_retrieve/dev/objects/Lead/fields/Asistencia__c.field-meta.xml
<CustomField>
    <fullName>Asistencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asistencia Ejecutivo?</label>
    <type>Checkbox</type>
</CustomField>