temp/onboarding_retrieve/dev/objects/Lead/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Leads &amp; Referrals</relationshipLabel>
    <relationshipName>Leads_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>