temp/onboarding_retrieve/dev/objects/Lead/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>