temp/onboarding_retrieve/dev/objects/Lead/fields/CalleB__c.field-meta.xml
<CustomField>
    <fullName>CalleB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Calle Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>