temp/onboarding_retrieve/dev/objects/Lead/fields/Capacidad_de_ahorro__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_ahorro__c</fullName>
    <label>Capacidad de ahorro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No estoy seguro</fullName>
            </value>
            <value>
                <fullName>Menos de $10,000 MXN</fullName>
            </value>
            <value>
                <fullName>Entre $10,000 y $20,000 MXN</fullName>
            </value>
            <value>
                <fullName>Entre $20,000 y $30,000 MXN</fullName>
            </value>
            <value>
                <fullName>Más de $30,000 MXN</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>Entre $100,000 y $500,000 MXN</fullName>
                <isActive>false</isActive>
                <label>Entre $100,000 y $500,000 MXN</label>
            </value>
            <value>
                <fullName>Entre $25,000 y $100,000 MXN</fullName>
                <isActive>false</isActive>
                <label>Entre $25,000 y $100,000 MXN</label>
            </value>
            <value>
                <fullName>Menos de $25,000 MXN</fullName>
                <isActive>false</isActive>
                <label>Menos de $25,000 MXN</label>
            </value>
            <value>
                <fullName>Más de $500,000 MXN</fullName>
                <isActive>false</isActive>
                <label>Más de $500,000 MXN</label>
            </value>
            <value>
                <fullName>No tengo</fullName>
                <isActive>false</isActive>
                <label>No tengo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>