temp/onboarding_retrieve/dev/objects/Lead/fields/Casa_propia__c.field-meta.xml
<CustomField>
    <fullName>Casa_propia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Casa propia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>