temp/onboarding_retrieve/dev/objects/Lead/fields/CC_Fecha_Contactado__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Contactado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Contactado</label>
    <type>DateTime</type>
</CustomField>