temp/onboarding_retrieve/dev/objects/Lead/fields/CC_Fecha_Hora_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Hora_Asignacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha/Hora Asignación</label>
    <type>DateTime</type>
</CustomField>