temp/onboarding_retrieve/dev/objects/Lead/fields/CC_Fecha_No_contactado__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_No_contactado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha No contactado</label>
    <type>DateTime</type>
</CustomField>