temp/onboarding_retrieve/dev/objects/Lead/fields/CC_Fecha_No_convertido__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_No_convertido__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha No convertido</label>
    <type>DateTime</type>
</CustomField>