temp/onboarding_retrieve/dev/objects/Lead/fields/Centro_financiero__c.field-meta.xml
<CustomField>
    <fullName>Centro_financiero__c</fullName>
    <formula>Owner:User.REQ36_Centro_Financiero__c</formula>
    <label>Centro financiero</label>
    <type>Text</type>
</CustomField>