temp/onboarding_retrieve/dev/objects/Lead/fields/CHR_FB_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>CHR_FB_Lead_ID__c</fullName>
    <description>Identificador numérico de Lead proveniente de Facebook. Su longitud puede ser de 15 a 16 caracteres.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Facebook ID de prospecto</inlineHelpText>
    <label>Facebook Lead ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>