temp/onboarding_retrieve/dev/objects/Lead/fields/CIC__c.field-meta.xml
<CustomField>
    <fullName>CIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>