temp/onboarding_retrieve/dev/objects/Lead/fields/CityB__c.field-meta.xml
<CustomField>
    <fullName>CityB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Ciudad o Población Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>