temp/onboarding_retrieve/dev/objects/Lead/fields/Clasificacion_Persona__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_Persona__c</fullName>
    <label>Clasificación de Persona</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Persona__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No aplica</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Profesionista Independiente</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Sin actividad económica</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Actividad empresarial</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Persona Moral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>