temp/onboarding_retrieve/dev/objects/Lead/fields/Cliente_Creado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Creado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Cliente Creado?</label>
    <type>Checkbox</type>
</CustomField>