temp/onboarding_retrieve/dev/objects/Lead/fields/ClienteCreadoDeProspecto__c.field-meta.xml
<CustomField>
    <fullName>ClienteCreadoDeProspecto__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo para identificar cuando se crea el prospecto y cuando se convierte a cliente identificar que se convirtio desde prospecto</description>
    <label>Cliente creado de prospecto</label>
    <type>Checkbox</type>
</CustomField>