temp/onboarding_retrieve/dev/objects/Lead/fields/Codigo_de_area__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_area__c</fullName>
    <label>Código Pais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>