temp/onboarding_retrieve/dev/objects/Lead/fields/Comprobante_de_domicilio__c.field-meta.xml
<CustomField>
    <fullName>Comprobante_de_domicilio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprobante de domicilio</label>
    <type>Checkbox</type>
</CustomField>