temp/onboarding_retrieve/dev/objects/Lead/fields/Conocimiento_financiero__c.field-meta.xml
<CustomField>
    <fullName>Conocimiento_financiero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conocimiento financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>