temp/onboarding_retrieve/dev/objects/Lead/fields/Contratos__c.field-meta.xml
<CustomField>
    <fullName>Contratos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta tus contratos</label>
    <type>Checkbox</type>
</CustomField>