temp/onboarding_retrieve/dev/objects/Lead/fields/CountryB__c.field-meta.xml
<CustomField>
    <fullName>CountryB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>País Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>