temp/onboarding_retrieve/dev/objects/Lead/fields/CPG__c.field-meta.xml
<CustomField>
    <fullName>CPG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPG</label>
    <type>TextArea</type>
</CustomField>