temp/onboarding_retrieve/dev/objects/Lead/fields/CR_EV_Areas_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CR_EV_Areas_Negocio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Áreas de Negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>