temp/onboarding_retrieve/dev/objects/Lead/fields/CR_EV_Perfil_Asesor__c.field-meta.xml
<CustomField>
    <fullName>CR_EV_Perfil_Asesor__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <label>Perfil del Asesor</label>
    <type>Text</type>
</CustomField>