temp/onboarding_retrieve/dev/objects/Lead/fields/CR_Rep_ConversionDate__c.field-meta.xml
<CustomField>
    <fullName>CR_Rep_ConversionDate__c</fullName>
    <description>Marca la fecha cuando un registro pasa a estado convertido</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CR_Rep_ConversionDate</label>
    <type>Date</type>
</CustomField>