temp/onboarding_retrieve/dev/objects/Lead/fields/Decl_country__c.field-meta.xml
<CustomField>
    <fullName>Decl_country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>País de declaración</label>
    <length>255</length>
    <type>Text</type>
</CustomField>