temp/onboarding_retrieve/dev/objects/Lead/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>