temp/onboarding_retrieve/dev/objects/Lead/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Tipo de Identificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>