temp/onboarding_retrieve/dev/objects/Lead/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entre 18 y 25 años</fullName>
            </value>
            <value>
                <fullName>Entre 26 y 35 años</fullName>
            </value>
            <value>
                <fullName>Entre 36 y 45 años</fullName>
            </value>
            <value>
                <fullName>46 años o más</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>