temp/onboarding_retrieve/dev/objects/Lead/fields/Elementos_de_presentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Elementos_de_presentaci_n__c</fullName>
    <label>Elementos de presentación</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentación personal</fullName>
            </value>
            <value>
                <fullName>Presentación Institucional</fullName>
            </value>
            <value>
                <fullName>Presentación de portafolio de productos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>