temp/onboarding_retrieve/dev/objects/Lead/fields/EMI_NUM__c.field-meta.xml
<CustomField>
    <fullName>EMI_NUM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No. de Emisión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>