temp/onboarding_retrieve/dev/objects/Lead/fields/Estado_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Estado_Nacimiento__c</fullName>
    <label>Estado de Nacimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGS</fullName>
                <label>Aguascalientes</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>Baja California</label>
            </value>
            <value>
                <fullName>BCS</fullName>
                <label>Baja California Sur</label>
            </value>
            <value>
                <fullName>CMP</fullName>
                <label>Campeche</label>
            </value>
            <value>
                <fullName>CHS</fullName>
                <label>Chiapas</label>
            </value>
            <value>
                <fullName>CHI</fullName>
                <label>Chihuahua</label>
            </value>
            <value>
                <fullName>DF</fullName>
                <label>Ciudad de México</label>
            </value>
            <value>
                <fullName>COA</fullName>
                <label>Coahuila</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <label>Colima</label>
            </value>
            <value>
                <fullName>DGO</fullName>
                <label>Durango</label>
            </value>
            <value>
                <fullName>GTO</fullName>
                <label>Guanajuato</label>
            </value>
            <value>
                <fullName>GRO</fullName>
                <label>Guerrero</label>
            </value>
            <value>
                <fullName>HGO</fullName>
                <label>Hidalgo</label>
            </value>
            <value>
                <fullName>JAL</fullName>
                <label>Jalisco</label>
            </value>
            <value>
                <fullName>MEX</fullName>
                <label>México</label>
            </value>
            <value>
                <fullName>MCH</fullName>
                <label>Michoacán</label>
            </value>
            <value>
                <fullName>MOR</fullName>
                <label>Morelos</label>
            </value>
            <value>
                <fullName>NAY</fullName>
                <label>Nayarit</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Nuevo León</label>
            </value>
            <value>
                <fullName>OAX</fullName>
                <label>Oaxaca</label>
            </value>
            <value>
                <fullName>PUE</fullName>
                <label>Puebla</label>
            </value>
            <value>
                <fullName>QRO</fullName>
                <label>Querétaro</label>
            </value>
            <value>
                <fullName>QR</fullName>
                <label>Quintana Roo</label>
            </value>
            <value>
                <fullName>SLP</fullName>
                <label>San Luis Potosí</label>
            </value>
            <value>
                <fullName>SIN</fullName>
                <label>Sinaloa</label>
            </value>
            <value>
                <fullName>SON</fullName>
                <label>Sonora</label>
            </value>
            <value>
                <fullName>TAB</fullName>
                <label>Tabasco</label>
            </value>
            <value>
                <fullName>TMS</fullName>
                <label>Tamaulipas</label>
            </value>
            <value>
                <fullName>TLX</fullName>
                <label>Tlaxcala</label>
            </value>
            <value>
                <fullName>VER</fullName>
                <label>Veracruz</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>