temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Click_a_la_pregunta_C__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_a_la_pregunta_C__c</fullName>
    <description>Uses of action &apos;Click a la pregunta ¿Cómo puedo monitorear mis inversiones?&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click a la pre&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>