temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Click_a_la_secci_n_Cr__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_a_la_secci_n_Cr__c</fullName>
    <description>Uses of action &apos;Click a la sección Créditos y Financiamiento&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click a la sec&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>