temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Click_al_bot_n_rendimi__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_al_bot_n_rendimi__c</fullName>
    <description>Uses of action &apos;Click al botón rendimiento esperado de mis inversiones&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click al botón&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>