temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Click_CTA_Contactar_As__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_CTA_Contactar_As__c</fullName>
    <description>Uses of action &apos;Click CTA Contactar Asesor Asalariado&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click CTA Cont&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>