temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Clicked_inversiones_li__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Clicked_inversiones_li__c</fullName>
    <description>Uses of action &apos;Clicked inversiones link on landing page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Clicked invers&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>