temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageAction_Popup_contestado__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Popup_contestado__c</fullName>
    <description>Uses of action &apos;Popup contestado&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Popup contesta&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>