temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageEngagement__c.field-meta.xml
<CustomField>
    <fullName>EvergageEngagement__c</fullName>
    <description>Engagement score based on activity</description>
    <label>Evergage Engagement</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>