temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageEngagementTrend__c.field-meta.xml
<CustomField>
    <fullName>EvergageEngagementTrend__c</fullName>
    <description>Engagement trend based on activity</description>
    <label>Evergage Eng. Trend</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>