temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageFilters__c.field-meta.xml
<CustomField>
    <fullName>EvergageFilters__c</fullName>
    <description>Evergage matching filters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evergage Filters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>