temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageFirstActivity__c.field-meta.xml
<CustomField>
    <fullName>EvergageFirstActivity__c</fullName>
    <description>First activity with application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evergage First Visit</label>
    <type>DateTime</type>
</CustomField>