temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageSegment_IsRQz__c.field-meta.xml
<CustomField>
    <fullName>EvergageSegment_IsRQz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Personas que solicitaron contacto con calculadora PPR No Asalariado&apos;</description>
    <label>Evergage In Segment &apos;Personas que solic&apos;</label>
    <type>Checkbox</type>
</CustomField>