temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageSegment_Jz8XZ__c.field-meta.xml
<CustomField>
    <fullName>EvergageSegment_Jz8XZ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Personas que tienen más de una meta financiera&apos;</description>
    <label>Evergage In Segment &apos;Personas que tiene&apos;</label>
    <type>Checkbox</type>
</CustomField>