temp/onboarding_retrieve/dev/objects/Lead/fields/EvergageSegment_lkFeE__c.field-meta.xml
<CustomField>
    <fullName>EvergageSegment_lkFeE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Personas que interactuaron con la calculadora PPR Asalariado&apos;</description>
    <label>Evergage In Segment &apos;Personas que inter&apos;</label>
    <type>Checkbox</type>
</CustomField>