temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Actividad_Economica__c.field-meta.xml
<CustomField>
    <fullName>F3_Actividad_Economica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividad Económica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>