temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Consecutivo_ID__c.field-meta.xml
<CustomField>
    <fullName>F3_Consecutivo_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Consecutivo ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>