temp/onboarding_retrieve/dev/objects/Lead/fields/F3_CURP__c.field-meta.xml
<CustomField>
    <fullName>F3_CURP__c</fullName>
    <description>CURP que se enviará para la generación de BP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CURP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>