temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Division__c.field-meta.xml
<CustomField>
    <fullName>F3_Division__c</fullName>
    <formula>Owner:User.F3_Division__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>