temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Es_empleado__c.field-meta.xml
<CustomField>
    <fullName>F3_Es_empleado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es empleado?</label>
    <type>Checkbox</type>
</CustomField>