temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>F3_Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Casado/a</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Soltero/a</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Separado/a</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Divorciado/a</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Viudo/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>