temp/onboarding_retrieve/dev/objects/Lead/fields/F3_isCreatedInSAP__c.field-meta.xml
<CustomField>
    <fullName>F3_isCreatedInSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado en SAP</label>
    <type>Checkbox</type>
</CustomField>